--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
 flask==2.3.3
 python-dotenv==1.0.0
+psycopg2-binary==2.9.7
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+matplotlib==3.7.2
+seaborn==0.12.2
+plotly==5.15.0
+sqlalchemy==2.0.19
+gunicorn==21.2.0
